--- a/frontend/src/pages/pages_css/menu.css
+++ b/frontend/src/pages/pages_css/menu.css
@@ -63,7 +63,7 @@ body {
 
 /* Main Content */
 .menu-container {
-    max-width: 1200px;
+    max-width: 700px;
     margin: 20px auto;
     padding: 0 20px;
 }
@@ -72,14 +72,14 @@ body {
     margin-bottom: 25px;
 }
 
-.menu-title {
+/* .menu-title {
     font-size: 24px;
     font-weight: 600;
-}
+} */
 
 .menu-items {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     gap: 25px;
 }
 
@@ -104,6 +104,13 @@ body {
     color: #333;
 }
 
+.item-image-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .item-price {
     font-size: 16px;
     font-weight: 700;
@@ -124,21 +131,25 @@ body {
 }
 
 .item-image {
-    position: relative;
+    /* position: relative; */
     width: 150px;
     height: 150px;
     border-radius: 8px;
-    overflow: hidden;
+    /* margin-right: 10px; */
+    /* overflow: hidden; */
 }
 
 .item-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    border-radius: 8px;
+    /* margin-right: 100px; */
+    /* top: 100%; */
+    /* object-fit: cover; */
 }
 
-.add-button {
-    position: absolute;
+/* .add-button {
+    position:absolute;
     bottom: 10px;
     right: 10px;
     background-color: #cb202d;
@@ -150,7 +161,7 @@ body {
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.3s;
-}
+} */
 
 .add-button:hover {
     background-color: #a81a25;
